spade-tests/src/snapshots/spade_tests__hir_lowering__tests__referring_to_unavailable_variable_causes_error.snap
---
source: spade-tests/src/hir_lowering.rs
assertion_line: 1605
---
pipeline(5) X(clk: clock) -> bool {reg*5; false}

pipeline(6) main(clk: clock, x: bool) -> bool {
        let x = inst(5) X(clk);
    reg*5;
        let res = stage(-1).x;
    reg;
        res
}


error: Use of x before it is ready
  ┌─ testinput:6:29
  │
6 │         let res = stage(-1).x;
  │                             ^ Is unavailable for another 1 stage
  │
  = Requesting x from stage 4
  = But it will not be available until stage 5


